.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Health_and_Safety__c.object
<CustomObject>
    <description>Used to record Health and Safety incidents</description>
    <fields>
        <fullName>xcdhcm__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Break/Fracture</fullName>
                </value>
                <value>
                    <fullName>Bruise</fullName>
                </value>
                <value>
                    <fullName>Burn/scald</fullName>
                </value>
                <value>
                    <fullName>Cut/ Bruise/ Graze to Head/ Eye</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Driver Fault</fullName>
                </value>
                <value>
                    <fullName>Electric Shock</fullName>
                </value>
                <value>
                    <fullName>Eye Right</fullName>
                </value>
                <value>
                    <fullName>Fine/ Police Notification</fullName>
                </value>
                <value>
                    <fullName>Fire/ Heat Burn</fullName>
                </value>
                <value>
                    <fullName>Fragment/ Scratch/Chemical in/to eye</fullName>
                </value>
                <value>
                    <fullName>Insurance Claim</fullName>
                </value>
                <value>
                    <fullName>Laceration</fullName>
                </value>
                <value>
                    <fullName>Liquid/Chemical Scold/Burn</fullName>
                </value>
                <value>
                    <fullName>Muscle Damage</fullName>
                </value>
                <value>
                    <fullName>Near Miss</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Slips/Trips/Falls</fullName>
                </value>
                <value>
                    <fullName>Third Party Fault</fullName>
                </value>
                <value>
                    <fullName>Twist/Sprain/Jar</fullName>
                </value>
                <value>
                    <fullName>Write Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Company_location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the incident took place on a Company site select the site here</inlineHelpText>
        <label>Company location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Location__c.xcdhcm__No_longer_in_use__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Click Show all results to display also Company locations which are no longer in use</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Location__c</referenceTo>
        <relationshipLabel>Health and Safety</relationshipLabel>
        <relationshipName>Health_and_Safety</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_Detail__c</fullName>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Health and Safety</relationshipLabel>
        <relationshipName>Health_and_Safety</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Employee_Detail__r.xcdhcm__Leaving_Date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Insurance_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If( 
not(isblank( xcdhcm__Employee_Detail__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c )), 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Employee_Detail__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c , 
xcdhcm__Employee_leaving_date__c &lt;  xcdhcm__Employee_Detail__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c  
)</formula>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Location__c</fullName>
        <label>Where incident occurred</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Near_Miss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Near miss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reported_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Health_and_Safety</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Aid Required</fullName>
                </value>
                <value>
                    <fullName>Major Injury</fullName>
                </value>
                <value>
                    <fullName>Minor injury</fullName>
                </value>
                <value>
                    <fullName>Injury</fullName>
                </value>
                <value>
                    <fullName>Hospitalisation</fullName>
                </value>
                <value>
                    <fullName>Surgery Visit Required</fullName>
                </value>
                <value>
                    <fullName>Respiratory Condition</fullName>
                </value>
                <value>
                    <fullName>Hearing Loss</fullName>
                </value>
                <value>
                    <fullName>Skin Disorder</fullName>
                </value>
                <value>
                    <fullName>Poisoning</fullName>
                </value>
                <value>
                    <fullName>All other illnesses</fullName>
                </value>
                <value>
                    <fullName>No Injury</fullName>
                </value>
                <value>
                    <fullName>Near Miss</fullName>
                </value>
                <value>
                    <fullName>Speeding</fullName>
                </value>
                <value>
                    <fullName>Congestion Charge</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Allegation of Damage</fullName>
                </value>
                <value>
                    <fullName>Allegation of Theft</fullName>
                </value>
                <value>
                    <fullName>RIDDOR 3 Day</fullName>
                </value>
                <value>
                    <fullName>RIDDOR Major</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Health and Safety</label>
    <nameField>
        <displayFormat>HS-{0000}</displayFormat>
        <label>Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health and Safety</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>